Update to Syncope 3.0.10 and first run with -Ppgjsonb -Dbulk.load.users=1000